# gitlab_config

./: Cargo.toml  README.md
src/: main.rs
static/root/: index.html
static/root/css/: styles.css
static/root/js/: index.js
