[package]
name = "gitlab_code"
version = "0.1.0"
authors = ["Nick  Tom Thomas <nickbetty2000@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="3.3.2",features=["openssl"]}
serde = "1.0.125"
serde_json = "1.0.64"
env_logger = "0.8.3"
dotenv = "0.15.0"
actix-files = "0.5.0"
openssl = "0.10.33"
async-trait = "0.1.48"

